--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-popper": "^1.3.3",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
-    "reactstrap": "^7.1.0"
+    "reactstrap": "^7.1.0",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
